applications/yocto-meta-openeuler/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: yocto-meta-openeuler
  name: yocto-meta-openeuler
