applications/yocto-meta-openeuler/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: yocto-meta-openeuler
  annotations:
    kubernetes.io/elb.id: 4797d866-6798-4801-833a-2de1b37b92dd
    kubernetes.io/elb.class: union
    kubernetes.io/elb.lb-algorithm: ROUND_ROBIN
spec:
  ports:
  - name: httpport
    protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: website
  type: LoadBalancer
