applications/yocto-meta-openeuler/networkpolicy.yaml
kind: NetworkPolicy
metadata:
  name: yocto-meta-openeuler-policy-01
  namespace: yocto-meta-openeuler
spec:
  podSelector:
    matchLabels:
      app: website
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
      from:
        - namespaceSelector:
            matchLabels:
              project: ingress-nginx
  policyTypes:
    - Ingress
apiVersion: networking.k8s.io/v1
